[workspace]
resolver = "2"
members = [
    "movement-sdk",
    # "movement-sdk-avalanche",

    # clis
    # "clis/aptos",
    "clis/movement"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
async-trait = { version = "0.1" } 
anyhow = { version = "1" }     # For flexible error handling
avalanche-types = { version = "0.1.3", features = ["subnet", "codec_base64"] }
movement-sdk = { path = "movement-sdk" }
# aptos = { path = "clis/aptos" }

tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
ctor = "0.2.5"
dirs = "3.0.2"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
tempfile = "3.2.0"
semver = { version = "1.0.5", features = ["serde"] }

base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }

# todo: bump clap to most recent version
clap = { version = "4.4.10", features = ["derive", "env", "suggestions"] }

const-str = "0.5"

tracing = { version = "0.1.27", features = ["span_event"] }