[workspace]
resolver = "2"
members = [
    # framework
    "movement-sdk",
    # "movement-sdk-avalanche",

    # execution
    "execution/sui-block-executor",
    "execution/aptos-block-executor",
    "execution/canonical-block-executor",

    # types
    "types/sui-helper-types",
    "types/canonical-types",
    "types/aptos-helper-types",

    # sui helpers
    "sui-helpers/sui-block-authority-providers",

    # clis
    "clis/movement"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
# internal
movement-sdk = { path = "movement-sdk" }
aptos-helper-types = { path = "types/aptos-helper-types" }
sui-helper-types = { path = "types/sui-helper-types" }
canonical-types = { path = "types/canonical-types" }
sui-block-executor = { path = "execution/sui-block-executor" }
aptos-block-executor = { path = "execution/aptos-block-executor" }
canonical-block-executor = { path = "execution/canonical-block-executor" }
sui-block-authority-providers = { path = "sui-helpers/sui-block-authority-providers" }



async-trait = { version = "0.1" } 
anyhow = { version = "1" }     # For flexible error handling
avalanche-types = { version = "0.1.3", features = ["subnet", "codec_base64"] }
# aptos = { path = "clis/aptos" }

futures = "0.3"
tokio = { version = "1.21.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
ctor = "0.2.5"
dirs = "3.0.2"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
tempfile = "3.2.0"
semver = { version = "1.0.5", features = ["serde"] }

base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }

# todo: bump clap to most recent version
clap = { version = "4.4.10", features = ["derive", "env", "suggestions"] }

const-str = "0.5"

tracing = { version = "0.1.27", features = ["span_event"] }

# aptos
aptos-framework = { path = "../vendors/aptos-core/aptos-move/framework" }
aptos-vm = { path = "../vendors/aptos-core/aptos-move/aptos-vm" }
aptos-types = { path = "../vendors/aptos-core/types" }
aptos-executor = { path = "../vendors/aptos-core/execution/executor" }
aptos-executor-types = { path = "../vendors/aptos-core/execution/executor-types" }
aptos-storage-interface = { path = "../vendors/aptos-core/storage/storage-interface" }
aptos-crypto = { path = "../vendors/aptos-core/crates/aptos-crypto" }

# sui
sui-adapter-latest = { path = "../vendors/sui/sui-execution/latest/sui-adapter" }
sui-types = { path = "../vendors/sui/crates/sui-types" }
sui-core = { path = "../vendors/sui/crates/sui-core" }
sui-swarm-config = { path = "../vendors/sui/crates/sui-swarm-config" }
sui-test-transaction-builder = { path = "../vendors/sui/crates/sui-test-transaction-builder" }
typed-store = { path = "../vendors/sui/crates/typed-store" }