[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
avalanche-installer = "0.0.77"
avalanche-network-runner-sdk = "0.3.3" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { workspace = true } # https://crates.io/crates/avalanche-types
aptos-sdk = {workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }