[package]
name = "subnet-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["default"] }
http-body-util = "0.1.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "map-request-body", "util", "limit"] }
tracing = { version = "0.1.2", default-features = false, features = ["std"]}
futures-core = { version = "0.3" }
tracing-subscriber = "0.3.18"
