[package]
name = "channel-avalanche"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
avalanche-types = { workspace = true }
movement-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ctor = { workspace = true }