[package]
name = "spaces-cli"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"
publish = false
description = "spacesvm cli for issuing RPC commands"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[[bin]]
name = "spaces-cli"
path = "src/bin/spaces-cli/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
jsonrpc-core = "18.0.0"
log = "0.4.17"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89" 
spacesvm = { path = "../spacesvm" }
tokio = { version = "1.22.0", features = [] }
