[package]
name = "spacesvm"
version = "0.0.1"
edition = "2021"
rust-version = "1.65"
publish = true
description = "Authenticated, hierarchical key-value store w/EIP-712 compatibility"
license = "BSD-3-Clause"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/spacesvm-rs"
readme = "README.md"

[[bin]]
name = "spacesvm"
path = "src/bin/spaces/main.rs"

[dependencies]
avalanche-types = { version = "0.0.144", features = ["subnet"] }
byteorder = "1.4.3"
chrono = "0.4.23"
crossbeam-channel = "0.5.6"
derivative = "2.2.0"
dyn-clone = "1.0.9"
ethereum-types = { version = "0.14.0" }
clap = { version = "4.0.27", features = ["cargo", "derive"] }
eip-712 = "0.1.0"
env_logger = "0.10.0"
hex = "0.4.3"
http = "0.2.8"
hyper = "0.14.23"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0"
log = "0.4.17"
lru = "0.8.1"
prost = "0.11.2"
ripemd = "0.1.3"
semver = "1.0.14"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
sha3 = "0.10.6"
tokio = { version = "1.22.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = { version = "0.8.2", features = ["gzip"] }
tonic-health = "0.7"
typetag = "0.2"

[dev-dependencies] 
jsonrpc-tcp-server = "18.0.0"
futures-test = "0.3.25"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
