[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.69"
publish = false
description = "e2e tests for timestampvm"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.76"
avalanche-network-runner-sdk = "0.3.0" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { version = "0.0.398", features = ["jsonrpc_client", "subnet"] } # https://crates.io/crates/avalanche-types
env_logger = "0.10.0"
log = "0.4.19"
random-manager = "0.0.5"
serde_json = "1.0.102" # https://github.com/serde-rs/json/releases
tempfile = "3.6.0"
# subnet = { path = "../../subnet" }
tokio = { version = "1.29.1", features = [] } # https://github.com/tokio-rs/tokio/releases