[package]
name = "aptos"
description = "Movement tool for management of nodes and interacting with the blockchain. Based on the Movement CLI."
version = "1.0.13"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-backup-cli = { workspace = true }
aptos-bitvec = { workspace = true }
aptos-build-info = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-db-tool = { workspace = true }
aptos-debugger = { workspace = true }
aptos-faucet-core = { workspace = true }
aptos-framework = { workspace = true }
aptos-gas = { workspace = true }
aptos-gas-profiling = { workspace = true }
aptos-genesis = { workspace = true }
aptos-github-client = { workspace = true }
aptos-global-constants = { workspace = true }
aptos-keygen = { workspace = true }
aptos-logger = { workspace = true }
aptos-network-checker = { workspace = true }
aptos-node = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-sdk = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-telemetry = { workspace = true }
aptos-temppath = { workspace = true }
aptos-transactional-test-harness = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true, features = ["testing"] }
aptos-vm-genesis = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = "3.2.3"

codespan-reporting = "0.11.1"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
dirs = "4.0.0"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
ipnet = "2.5.0"
itertools = "0.10.3"
num_cpus = "1.13.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
thiserror = "1.0.48"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
walkdir = "2.3.2"

move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-cli = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
move-core-types = { workspace = true }
move-coverage = { workspace = true }
move-disassembler = { workspace = true }
move-ir-compiler = { workspace = true }
move-ir-types = { workspace = true }
move-package = { workspace = true }
move-prover = { workspace = true }
move-prover-boogie-backend = { workspace = true }
move-symbol-pool = { workspace = true }
move-unit-test = { workspace = true, features = [ "debugging" ] }
move-vm-runtime = { workspace = true, features = [ "testing" ] }
rand = { version =  "0.7.3" }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.5", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }


[features]
default = []
fuzzing = []
no-upload-proposal = []
indexer = ["aptos-node/indexer"]
cli-framework-test-move = []

[build-dependencies]
shadow-rs = { version = "0.16.2" }
