[package]
name = "movement"
version = "0.4.1"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true}
dirs = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
const-str = { workspace = true }
util = { workspace = true }
artifacts = { workspace = true }
services = { workspace = true }
once_cell = { workspace = true }

# aptos and sui only if features are enabled

# sui
sui = { path = "../../../vendors/sui/crates/sui", optional = true }

# aptos
aptos = { path = "../../../vendors/aptos-core/crates/aptos", optional = true }

# features
[features]
sui = ["dep:sui"]
aptos = ["dep:aptos"]