[package]
name = "canonical-block-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
movement-sdk = { workspace = true }

# general
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
aptos-helper-types = { workspace = true }
