[package]
name = "sui-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# general
anyhow = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
bcs = { workspace = true }
movement-sdk = { workspace = true }
tempfile = { workspace = true }

# sui
# todo: conflicting rocksdb means we can't use workspace
# todo: likely movement-sdk will move into its own workspace
# todo: once that happens, we can move sui into its own workspace
# todo: we will have to reconcile the two when we begin on the canonical VM
sui-adapter-latest = { workspace = true }
sui-types = { workspace = true }
sui-core = { workspace = true }
sui-swarm-config = { workspace = true }
sui-test-transaction-builder = { workspace = true}
