[package]
name = "sui-block-authority-providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
sui-helper-types = { workspace = true }

# sui
sui-types = { workspace = true }

# general
futures = {workspace = true}
async-trait = { workspace = true }
anyhow = { workspace = true }