[package]
name = "artifact"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true}
dirs = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
const-str = { workspace = true }