[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
ron = { workspace = true}
toml = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true}
dirs = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
const-str = { workspace = true }
futures = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }
flate2 = { workspace = true }

[features]
logging = []