[package]
name = "e2e"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"
publish = false
description = "Byzantine tests for Avalanche Go"
license = "BSD-3-Clause"
homepage = "https://avax.network"

[dependencies]

[dev-dependencies]
avalanche-installer = "0.0.8"
avalanche-network-runner-sdk = "0.3.0" # https://crates.io/crates/avalanche-network-runner-sdk
avalanche-types = { version = "0.0.144", features = ["client", "subnet"] } # https://crates.io/crates/avalanche-types
env_logger = "0.10.0"
log = "0.4.17"
random-manager = "0.0.1"
serde_json = "1.0.87" # https://github.com/serde-rs/json/releases
tempfile = "3.3.0"
spacesvm = { path = "../../spacesvm" }
tokio = { version = "1.22.0", features = [] } # https://github.com/tokio-rs/tokio/releases